# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import sketchesRouter from "./sketches";
+import geminiRouter from "./gemini";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(sketchesRouter);
+router.use(geminiRouter);
 
 export default router;
